# rilot

./: .gitignore  Cargo.toml  Dockerfile  README.md
adapters/edge-wasm/: README.md
adapters/edge-wasm/src/: lib.rs
adapters/edge-wasm/wit/: edge-router.wit
crates/rilot-core/: Cargo.toml
crates/rilot-core/src/: lib.rs
docs/: README.md  architecture.md  config-reference.md  edge-target.md  model-calibration.md  operations.md  research-toolkit.md  runtime-behavior.md  wasm-carbon-plugin.md
examples/: Cargo.toml
examples/config/: config.json
examples/node-apps/: README.md  background-east-app.js  background-west-app.js  checkout-local-app.js  plugin-oracle-app.js  region-zone-app.js  run-local-zones.sh  us-east-app.js  us-west-app.js
examples/node-apps/lib/: create-zone-app.js
examples/scripts/: run_all_scenarios_report.py
examples/src/: lib.rs
research-kit/: README.md  config.docker.json  config.live.json  docker-compose.live.yml  docker-compose.yml  prometheus.yml
research-kit/carbon-traces/: electricitymap-latest-sample.json  electricitymap-live-10zone-sample.json  electricitymap-live-dynamic.json  us-grid-sample.csv
research-kit/result_live/comparative-20260225T142537Z/: charts.html  metrics-balanced.prom  metrics-baseline_no_carbon_balanced.prom  metrics-baseline_no_carbon_latency_first.prom  metrics-baseline_no_carbon_strict_local.prom  (+6 more)
research-kit/scripts/: carbon-signal-api.js  charts.js  run_comparative_evaluation.py  run_experiment.sh  run_live_experiment.sh  run_weight_sensitivity.py
src/: config.rs  main.rs  proxy.rs  wasm_engine.rs
(+108 files in other folders)
