[package]
name = "rilot"
version = "0.1.0"
edition = "2021"
authors = ["Maninderpreet Singh <maninderpreetchanna@gmail.com>"]
description = "Carbon Cursor edge routing proxy with multi-objective policies, Wasm extensibility, and carbon-aware observability."
license = "MIT"
repository = "https://github.com/SudoDevStudio/rilot"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.21.3"
anyhow               = "1.0"
tokio                = { version = "1", features = ["macros"] }
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
wasmtime           = { version = "32.0.0", features = ["component-model"] }
wasmtime-wasi      = "32.0.0"
wasmtime-wasi-io   = "32.0.0"
wasmtime-wasi-http = "32.0.0"
env_logger = "0.11"
log="0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rilot-core = { path = "crates/rilot-core" }
